hphp/test/slow/parser/afl5934248.php.expectf
Fatal error: This character is invalid. in %s/test/slow/parser/afl5934248.php on line 2